<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Hotel Display</string>
    <string name="nameOfHotel">Belleclaire Hotel</string>
    <string name="addressOfHotel">250 West 77th Street, Manhattanf</string>
    <string name="starsOfHotel">3.0</string>
    <string name="distanceOfHotel">145.67</string>
    <string name="suites_availability">Available rooms:</string>
    <string name="roomsOfHotel">1,2,3,4,5</string>
    <string name="distance">Distance:</string>
    <string name="show_all_hotel">Show all hotel</string>
    <string name="additional_inf">Additional Information:</string>
    <string name="sort_by_stars">Sort by stars</string>
    <string name="sort_by_name">Sort by name</string>
</resources>
