<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="viewModel"
                type="stanevich.elizaveta.hoteldisplay.description.DescriptionViewModel" />
    </data>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

            <ImageView
                    android:id="@+id/imageOfHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:scaleType="centerCrop"
                    app:imgUrl="@{viewModel.selectedProperty.image}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

            <TextView
                    android:id="@+id/nameOfHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{viewModel.selectedProperty.name}"
                    android:textColor="@color/colorBlack"
                    android:textSize="32sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/starsOfHotel"
                    app:layout_constraintTop_toBottomOf="@+id/imageOfHotel"
                    tools:text="@string/nameOfHotel" />

            <!-- <android.support.constraint.Barrier
                     android:id="@+id/barrier"
                     app:constraint_referenced_ids = "nameOfHotel,starsOfHotel"
                     android:layout_width="20dp"
                     android:layout_height="wrap_content"
                     app:barrierDirection="right" />-->

            <TextView
                    android:id="@+id/addressOfHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.selectedProperty.address}"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/nameOfHotel"
                    android:textSize="18sp"
                    tools:text="@string/addressOfHotel" />

            <RatingBar
                    style="?android:attr/ratingBarStyleSmall"
                    android:id="@+id/starsOfHotel"
                    android:progressTint="@color/colorStars"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:rating="@{viewModel.selectedProperty.stars}"
                    android:visibility="visible"
                    app:layout_constraintStart_toEndOf="@id/nameOfHotel"
                    app:layout_constraintTop_toTopOf="@id/nameOfHotel"
                    tools:visibility="visible" />


            <TextView
                    android:layout_marginTop="16dp"
                    android:textColor="@color/colorPrimary"
                    android:id="@+id/tv_additional_inf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/additional_inf"
                    android:textSize="24sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/addressOfHotel"
                    tools:visibility="visible" />

            <TextView
                    android:id="@+id/tv_suites_availability"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/suites_availability"
                    android:textSize="20sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_additional_inf"
                    tools:visibility="visible" />

            <TextView
                    android:id="@+id/roomsOfHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.selectedProperty.suites_availability.replace(':',',')}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_suites_availability"
                    app:layout_constraintStart_toEndOf="@id/tv_suites_availability"
                    app:layout_constraintTop_toTopOf="@id/tv_suites_availability"
                    tools:text="@string/roomsOfHotel" />

            <TextView
                    android:id="@+id/tv_distance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distance"
                    android:textSize="16sp"
                    android:visibility="visible"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tv_suites_availability"
                    tools:visibility="visible" />


            <TextView
                    android:id="@+id/distanceOfHotel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:text="@{viewModel.selectedProperty.distance}"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@id/tv_distance"
                    app:layout_constraintStart_toEndOf="@id/tv_distance"
                    app:layout_constraintTop_toTopOf="@id/tv_distance"
                    tools:text="@string/distanceOfHotel" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>
</layout>